fix(/user/:id): left column too big

--- a/src/main.css
+++ b/src/main.css
@@ -30,7 +30,7 @@
   height: 100%;
   max-height: 750px;
   min-width: 400px;
-  max-width: 500px;
+  max-width: 600px;
 }
 
 .vertical-scroll {
@@ -130,14 +130,14 @@ img.square-lg { width: 350px; height: 350px; }
 img.square-xl { width: 450px; height: 450px; }
 
 .list-preview {
-  height: 225px;
+  height: 245px;
   display: flex;
   overflow-x: hidden;
   align-items: flex-end;
 }
 
 .list-preview > * {
-  height: 190px;
+  height: 225px;
   position: relative;
 }
 
